# QLink

./: Border.cpp  Border.h  CMakeLists.txt  Cell.cpp  Cell.h  DuoMode.cpp  DuoMode.h  DuoMode.ui  HomeMenu.cpp  HomeMenu.h  HomeMenu.ui  LinkLine.h  LoadOptions.cpp  LoadOptions.h  LoadOptions.ui  MapGenerator.cpp  MapGenerator.h  ModeSelect.cpp  ModeSelect.h  ModeSelect.ui  Position.h  README.md  SingleMode.cpp  SingleMode.h  SingleMode.ui  background.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.txt  qlinktest.cpp  qlinktest.h  randomgenerator.cpp  randomgenerator.h  selectfunctiontest.cpp  selectfunctiontest.h
Resource/: Cards.psd  chara.psd
save/: duo.sav  single.sav
